--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,174 @@
+body {
+	background-color: #ffffff;
+}
+
+nav {
+	background-color: #ffffff;
+	border-bottom: 2px solid #cccccc;
+	height: 90px;
+	padding: 0 40px 0 40px;
+}
+
+ul {
+	list-style-type: none;
+	padding: 0;
+	overflow: hidden;
+}
+
+li a {
+	text-decoration: none;
+	display: inline-block;
+	text-align: right;
+	padding: 10px;
+	float: left;
+	margin-right: 10px;
+	color: #777777;
+}
+
+ul:nth-child(2) {
+	border-right: solid;
+	border-left: solid;
+	border-color: #777777;
+}
+
 #name {
 	background-color: #4aaaa5;
 	color: white;
-	padding: 10px;
+	padding: 30px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size:	24px;
+	float: left;
+	clear: right;
+}
+
+#bio {
+	width: 65%;
+	padding: 30px;
+	border: 1px solid #777777;
+	display: inline-block;
+	clear: both;
+	margin-left: 0;
+
 }
 
 h2 {
 	color: #4aaaa5;
+	font-size: 24px;
+	line-height: 36px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-weight: 600;
+	padding: 10px;
+	border-bottom: 1px solid #777777;
+	margin-bottom: 15px;
+	column-span: all;
+}
+
+#ez {
+	height: 175px;
+	width: 200px;
+	float: left;
+	margin-right: 20px;
+	margin-bottom: 15px;
+}
+
+p {
+	width: 575px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 18px;
+	line-height: 27px;
+	color: #777777;
 }
 
 h3 {
 	color: #4aaaa5;
+	font-size: 20px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	line-height: 30px;
+}
+
+#connect {
+	display: inline-block;
+	width: 28%;
+	height: 130px;
+	border: 1px solid #777777;
+	float: right;
+	clear: left;
+	text-align: center;
+
+}
+.logo {
+	height: 62px;
+	width: 62px;
+	float: left;
+}
+
+footer {
+	text-align: center;
+	margin: 0;
+	color: #777777;
+	background-color: #666666;
+	padding: 38px;
+	border-top: 10px solid #4aaaa5;
+}
+
+h6 {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 14px;
+}
+
+#contact {
+	width: 65%;
+	display: inline-block;
+	padding: 30px;
+	border: 1px solid #777777;
+}
+
+input, textarea {
+	width: 100%;
+	font-size: 16px;
+	line-height: 24px;
+}
+
+label {
+	font-size: 18px;
+	line-height: 27px;
+	margin: 15px 0 15px 0;
+}
+
+#portfolio {
+	width: 65%;
+	display: inline-block;
+	column-count: 1;
+	padding: 30px;
+	border: 1px solid #777777;
+}
+
+.container {
+	height: 205px;
+	width: 275px;
+	position: relative;
+	float: left;
+	margin: 15px 15px 15px 15px;
+}
+
+.stock {
+	position: absolute;
+	margin: 0;
+	height: 205px;
+	width: 275px;
+	z-index: 1;
+}
+
+h4 {
+	z-index: 2;
+	position: absolute;
+	bottom: 10px;
+	background-color: #4aaaa5;
+	color: white;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size:	24px;
+	line-height: 36px;
+	text-align: center;
+	width: 275px;
+	padding: 10px 0 10px 0;
 }
