--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,16 @@ input, textarea {
 label {
 	font-size: 18px;
 	line-height: 27px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: #777777;
+}
+
+button {
+	background-color: #4aaaa5;
+	color: white;
+	border: none;
+	font-size: 18px;
+	padding: 10px 15px 10px 15px;
 }
 
 #portfolio {
